Fix spacing on homepage content

--- a/src/components/BodyContent/body-content.module.sass
+++ b/src/components/BodyContent/body-content.module.sass
@@ -8,6 +8,9 @@
   h4
     font-family: apparat
     font-size: 1em
+    // only used on homepage currently
+    margin-top: 2em
+    margin-bottom: 0.5em
   p
     color: #333
     margin-bottom: 1em
