--- a/src/styles/index.module.sass
+++ b/src/styles/index.module.sass
@@ -14,7 +14,7 @@
   height: auto
   margin: 0 30px
   @media (min-width: 660px)
-    margin-left: 48px
+    margin-left: 96px
     margin-right: 0
     margin-bottom: 24px
     width: 100%
